--- a/src/app.css
+++ b/src/app.css
@@ -1,24 +1,53 @@
+@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap");
+
+:root {
+  --BrightOrange: hsl(31, 77%, 52%);
+  --DarkCyan: hsl(184, 100%, 22%);
+  --VeryDarkCyan: hsl(179, 100%, 13%);
+  --VeryLightGray: hsl(0, 0%, 95%);
+  --TransparentWhite: hsla(0, 0%, 100%, 0.75);
+  --containerMaxWidth: 1000px;
+  --containerMinHeight: 90vh;
+}
+
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: #fafafa;
+  font-size: 15px;
+  background: var(--VeryLightGray);
+  color: var(--TransparentWhite);
 }
-div {
-  margin: auto;
-  width: 400px;
+
+.wrapper {
+  max-width: var(--containerMaxWidth);
+  min-height: var(--containerMinHeight);
+  height: var(--containerMinHeight);
+  margin: 2em auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-div > h2 {
-  text-align: center;
+
+.container {
+  max-width: 100%;
+  height: 60%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  border-radius: 8px;
+  overflow: hidden;
 }
-.footer {
-  position: fixed;
-  bottom: 0;
-}
-.footer > * {
-  text-align: center;
-  font-style: italic;
+
+@media only screen and (max-width: 576px) {
+  .wrapper {
+    margin: 1em;
+  }
+  .container {
+    grid-template-columns: 1fr;
+    overflow: auto;
+    height: 100%;
+  }
+
+  
 }
